--- a/JellyfishDashboardRN/package.json
+++ b/JellyfishDashboardRN/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/noto-sans": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@jellyfish-dev/react-native-client-sdk": "^0.1.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@types/react": "~18.2.14",
     "expo": "49.0.2",
     "expo-barcode-scanner": "~12.5.3",
     "expo-font": "~11.4.0",
@@ -21,7 +23,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "@expo-google-fonts/noto-sans": "^0.2.3"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
