--- a/JellyfishDashboardRN/tsconfig.json
+++ b/JellyfishDashboardRN/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig",
+  "extends": "../react-native-jellyfish-components/tsconfig",
   "compilerOptions": {
     // Avoid expo-cli auto-generating a tsconfig
   }
